compiler/tests/fixtures/negative/error_sema_arith_bad_type.sol
// E1007: arithmetic not supported on this type (bool + bool).
function start() -> bool {
    return true + false;
}
